# ExpertSystem

./: .gitignore  CMakeLists.txt  main.cpp
qml/: Workspace.qml  main.qml
qml/components/: CustomText.qml
shell/: CMakeLists.txt  test.cpp
shell/include/shell/: deduce_engine.hpp  domain.hpp  rule.hpp  variable.hpp
shell/src/: deduce_engine.cpp  domain.cpp  rule.cpp  variable.cpp
